--- a/about.html
+++ b/about.html
@@ -17,6 +17,7 @@
         </nav>
     </header>
     <main>
+        <div class="purpleWrapper"></div>
         <section id="aboutMe">
             <div id="topDiv">
                 <h1>Salut !<br> moi c'est Quentin</h1>
