--- a/path.html
+++ b/path.html
@@ -22,7 +22,7 @@
                 <div id="firstContainer">
                     <p>
                         Avril 2023 / Octobre 2023 <br>
-                        Développeur Web / Web mobile <br>
+                        <span class="otherFont">Développeur Web / Web mobile</span> <br>
                         école <span class="underline">numérique La Manu</span>
                     </p>
                     <div class="iconDiv">
@@ -38,7 +38,7 @@
                 <div id="secondContainer">
                     <p>
                         Février 2023 / Mars 2023 <br>
-                        Community Manager <br>
+                        <span class="otherFont">Community Manager</span> <br>
                         école <span class="underline">numérique La Manu</span>
                     </p>
                     <div class="iconDiv">
