--- a/contact.html
+++ b/contact.html
@@ -16,6 +16,7 @@
         </nav>
     </header>
     <main>
+        <div class="purpleWrapper"></div>
         <div id="container">
             <div class="top">
                 <h1>Contact</h1>
