--- a/about.html
+++ b/about.html
@@ -26,10 +26,9 @@
             <div class="centerDiv">
                 <img src="assets/img/headphones.png" alt="logo casque" class="likeIcon">
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad minima ex ipsam recusandae aperiam
-                    labore quasi, ratione facilis ipsa, dolorum, nam enim neque non dicta sit officiis fugiat eligendi
-                    alias asperiores. Aperiam eaque ab voluptate voluptatem officiis, reprehenderit facilis consectetur.
-                    In similique quia voluptatem itaque qui asperiores doloribus eos. Obcaecati?
+                    Développeur Web / Web mobile junior, je suis passioné par les nouvelles technologie. J'adore coder
+                    et jouer aux jeux vidéo quand j'ai du temps libre. Je suis également à la recherche d'un stage de
+                    40h, dans le développement Web afin de valider ma formation.
                 </p>
                 <img src="assets/img/retro-game.png" alt="logo game" class="likeIcon">
             </div>
