--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
     <header>
         <nav id="navBar">
             <a href="index.html"><img src="assets/img/home.png" alt="icon menu home" class="topIcon"></a>
-            <a href="#" class="fakeButton">Portfolio</a>
+            <!-- <a href="#" class="fakeButton">Portfolio</a> -->
         </nav>
     </header>
     <main>
@@ -26,7 +26,7 @@
             <div class="centerDiv">
                 <img src="assets/img/headphones.png" alt="logo casque" class="likeIcon">
                 <p>
-                    Développeur Web / Web mobile junior, je suis passioné par les nouvelles technologie. J'adore coder
+                    Développeur Web/Web mobile junior, je suis passionné par les nouvelles technologies. J'aime coder
                     et jouer aux jeux vidéo quand j'ai du temps libre. Je suis également à la recherche d'un stage de
                     40h, dans le développement Web afin de valider ma formation.
                 </p>
