--- a/contact.html
+++ b/contact.html
@@ -28,11 +28,12 @@
                     <p class="otherFont">quentinethuin540@gmail.com</p>
                 </div>
                 <div class="contact">
-                    <a href="https://www.linkedin.com/in/quentin-ethuin-637b88164"><img src="assets/img/linkedin.png"
-                            alt="logo linkedin" class="contactIcon"></a>
+                    <a href="https://www.linkedin.com/in/quentin-ethuin-637b88164" target="_blank"><img
+                            src="assets/img/linkedin.png" alt="logo linkedin" class="contactIcon"></a>
                 </div>
                 <div class="contact">
-                    <a href="#"><img src="assets/img/github.png" alt="logo github" class="contactIcon"></a>
+                    <a href="https://github.com/Hykky26" target="_blank"><img src="assets/img/github.png"
+                            alt="logo github" class="contactIcon"></a>
                 </div>
             </div>
         </div>
