--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
             <header>
                 <nav>
                     <div class="headerDiv">
-                        <a href="#"><img src="assets/img/note.png" alt="cv papier" class="headerImg" dowloads
-                                name="cv papier"></a>
+                        <a href="assets/img/Quentin Ethuin.pdf" download><img src="assets/img/note.png" alt="cv papier"
+                                class="headerImg" dowloads name="cv papier"></a>
                     </div>
                 </nav>
             </header>
@@ -32,7 +32,7 @@
                 <div class="footerDiv">
                     <a href="path.html" target="_blank">Parcours /</a>
                     <a href="about.html" target="_blank">À propos /</a>
-                    <a href="contact.html">Contact</a>
+                    <a href="contact.html" target="_blank">Contact</a>
                 </div>
             </div>
         </div>
