--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
     <header>
         <nav id="navBar">
             <a href="index.html"><img src="assets/img/home.png" alt="icon menu home" class="topIcon"></a>
-            <!-- <a href="#" class="fakeButton">Portfolio</a> -->
+            <a href="project.html" target="_blank" class="fakeButton">Projets</a>
         </nav>
     </header>
     <main>
