--- a/path.html
+++ b/path.html
@@ -11,12 +11,12 @@
 
 <body>
     <div id="sidebar">
+        <header>
+            <nav id="navBar">
+                <a href="index.html"><img src="assets/img/home.png" alt="icon menu home" class="topIcon"></a>
+            </nav>
+        </header>
         <main>
-            <header>
-                <nav id="navBar">
-                    <a href="index.html"><img src="assets/img/home.png" alt="icon menu home" class="topIcon"></a>
-                </nav>
-            </header>
             <section id="firstPath">
                 <h1>Parcours</h1>
                 <div id="firstContainer">
@@ -29,7 +29,7 @@
                         <img src="assets/img/html (1).png" alt="logo html" class="techIcon">
                         <img src="assets/img/css.png" alt="logo css" class="techIcon">
                         <img src="assets/img/js-format.png" alt="logo js" class="techIcon">
-                        <img src="assets/img/git (1).png" alt="logo git" class="techIcon">
+                        <img src="assets/img/github (5).png" alt="logo git" class="techIcon">
                         <img src="assets/img/file.png" alt="logo fig" class="techIcon">
                     </div>
                 </div>
