--- a/project.html
+++ b/project.html
@@ -22,9 +22,8 @@
     <main>
         <div class="projectContainer">
             <h2>ShiFumi</h2>
-            <a href="https://hykky26.github.io/ROCK_PAPER_SCISSORS/"><img
-                    src="assets/img/Capture d’écran 2023-06-20 à 09.46.08.png" alt="screenshot de mon projet ShiFuMi"
-                    class="shifumi"></a>
+            <a href="https://hykky26.github.io/ROCK_PAPER_SCISSORS/"><img src="assets/img/screenshot.png"
+                    alt="screenshot de mon projet ShiFuMi" class="shifumi"></a>
             <p>Réalisé en Javascript</p>
         </div>
     </main>
