--- a/project.html
+++ b/project.html
@@ -30,9 +30,9 @@
     <footer>
         <div class="firstSectionFooter">
             <div class="footerDiv">
-                <a href="path.html" target="_blank">Parcours /</a>
-                <a href="about.html" target="blank">À propos /</a>
-                <a href="contact.html">Contact</a>
+                <a href="path.html" target="_blank" class="black">Parcours /</a>
+                <a href="about.html" target="blank" class="black">À propos /</a>
+                <a href="contact.html" class="black">Contact</a>
             </div>
         </div>
     </footer>
