--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
             <header>
                 <nav>
                     <div class="headerDiv">
-                        <a href="assets/img/Quentin Ethuin.pdf" download><img src="assets/img/note.png" alt="cv papier"
-                                class="headerImg" dowloads name="cv papier"></a>
+                        <a href="assets/img/Quentin Ethuin (4).pdf" download><img src="assets/img/note.png"
+                                alt="cv papier" class="headerImg" dowloads name="cv papier"></a>
                     </div>
                 </nav>
             </header>
