--- a/project.html
+++ b/project.html
@@ -21,10 +21,19 @@
     </header>
     <main>
         <div class="projectContainer">
-            <h2>ShiFumi</h2>
-            <a href="https://hykky26.github.io/ROCK_PAPER_SCISSORS/"><img src="assets/img/screenshot.png"
-                    alt="screenshot de mon projet ShiFuMi" class="shifumi"></a>
-            <p>Réalisé en Javascript</p>
+            <div class="left">
+                <h2>ShiFumi</h2>
+                <a href="https://hykky26.github.io/ROCK_PAPER_SCISSORS/"><img src="assets/img/screenshot.png"
+                        alt="screenshot de mon projet ShiFuMi" class="image"></a>
+                <p>Réalisé en Javascript</p>
+            </div>
+            <div class="right">
+                <h2>Hubeareats</h2>
+                <a href="https://hykky26.github.io/huberteat/"><img
+                        src="assets/img/Capture d’écran 2023-07-21 à 16.26.14.png" alt="screenshot hubereats"
+                        class="image"></a>
+                <p>Réalisé en HTML et CSS</p>
+            </div>
         </div>
     </main>
     <footer>
