--- a/project.html
+++ b/project.html
@@ -28,7 +28,7 @@
                 <p>Réalisé en Javascript</p>
             </div>
             <div class="right">
-                <h2>Hubeareats</h2>
+                <h2>HUBERTeat</h2>
                 <a href="https://hykky26.github.io/huberteat/"><img
                         src="assets/img/Capture d’écran 2023-07-21 à 16.26.14.png" alt="screenshot hubereats"
                         class="image"></a>
